<resources>
    <string name="app_name">ITeach</string>
    <string name="facebook_app_id">237104046728139</string>
    <string name="perfil">Perfil</string>
    <string name="bio">Conte sobre você ou suas competências </string>
    <string name="nome">Nome </string>
    <string name="telefone">Telefone </string>
    <string name="local">Local </string>
    <string name="txt_botao_perfil">Ir para configurações</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_visualizar_aula">VisualizarAulaActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


    <string name="titulo_aula">Título da aula</string>
    <string name="num_vagas">Número de vagas</string>
    <string name="preco">Valor</string>
    <string name="assunto">Descrição ou ementa da aula</string>
    <string name="horario">Horário</string>
    <string name="data_inicio">Data de início das aulas</string>
    <string name="data_fim">Data de fim das aulas</string>
    <string name="tags">Tags (ex: artes, desenho, matemática)</string>
    <string name="botao_criar_aula">Criar Aula</string>
    <string name="local_aula">Endereço da aula</string>
    <string name="dias_semana">Dias da semana</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="free">Grátis</string>
    <string name="campo_nao_pode_ser_vazio">Campo não pode ser vazio.</string>
    <string name="escolha_uma_imagem">Escolha uma imagem.</string>
    <string name="escolha_um_dia">Escolha pelo menos um dia da semana.</string>
    <string name="data_final_apos_inicio">Data final deve ocorrer depois da data de início.</string>
    <string name="horario_final_apos_inicio">Horario final deve ocorrer após o horário de início.</string>
    <string name="data_inicio_futuro">Data de início deve ser numa data futura.</string>
    <string name="nova_tag">Nova Tag</string>
    <string name="title_activity_minhas_aulas">MinhasAulasActivity</string>
    <string name="aulas_cadastradas">Essas são as aulas em que você \nestá cadastrado no momento:</string>
    <string name="nenhuma_aula">Você não está matriculado em\n nenhuma aula no momento.</string>
    <string name="feed_card_class_sub">Nova matrícula em aula</string>
    <string name="feed_card_class_alert">Esta aula sofreu mudanças</string>
    <string name="feed_card_class_announce">Nova aula de seu interesse</string>
    <string name="feed_card_class_distance">Nova aula perto de você</string>
    <string name="feed_card_class_sair">Você foi desvinculado da turma</string>
    <string name="title_activity_sobre">SobreActivity</string>
    <string name="sem_avaliacoes">Sem avaliações.</string>
    <string name="avaliacao">%d Avaliação</string>
    <string name="avaliacoes">%d Avaliações</string>
    <string name="busca_aulas">Busca Aulas</string>
    <string name="busca_profs">Busca Professores</string>
    <string name="dist_desconhecida">Distância desconhecida.</string>
    <string name="distancia">Distância %s</string>
    <string name="vagas_ocupadas">Vagas ocupadas: %s</string>
    <string name="valor">Valor: %s</string>
    <string name="valor_free">Valor: Grátis!</string>
    <string name="data">Data: %s</string>
    <string name="data_n_informada">Data não informada.</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="filtros">Filtros</string>
    <string name="filtros_alpha">Alfabeticamente</string>
    <string name="filtros_dist">Distância</string>
    <string name="filtros_price">Preço</string>
    <string name="filtros_rating">Avaliação</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
