<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:All4One="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/pesquisar"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/item_filtros"
        android:title="@string/filtros"
        All4One:showAsAction="always"
        android:icon="@drawable/ic_filter_list">

        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/alfa"
                    android:title="@string/filtros_alpha"/>
                <item
                    android:id="@+id/rating"
                    android:title="@string/filtros_rating"/>
                <item
                    android:id="@+id/price"
                    android:title="@string/filtros_price"/>
                <item
                    android:id="@+id/dist"
                    android:title="@string/filtros_dist"/>
            </group>
        </menu>
    </item>




</menu>
